--- a/res_MuSu/3_[NA, c, MFA_subs]/MuSu_(NA, c, MFA_subs)_shiny.rmd
+++ b/res_MuSu/3_[NA, c, MFA_subs]/MuSu_(NA, c, MFA_subs)_shiny.rmd
@@ -33,69 +33,6 @@ suppressMessages(library(shinyWidgets))
 load("../../Tryout4No3.RData")
 ```
 
-# Contribution plot
-
-```{r contribution, echo=FALSE, fig.height= 10, fig.width = 10}
-inputPanel(
-  actionButton("plot_ctr", "Plot!"),
-  awesomeCheckboxGroup(inputId = "edgeOI",
-                       label = "Edges to show:", choices = unique(net.edge),
-                       selected = c(),inline = TRUE, status = "danger")
-)
-
-Checkplot_ctr <- eventReactive(input$plot_ctr,{
-  cjplot_show <- createFactorMap(c_edge[which(importantEdg == TRUE & net.edge %in% input$edgeOI),],
-                                 axis1 = 1, axis2 = 2,
-                                 col.points = col4ImportantEdg[which(importantEdg == TRUE & net.edge %in% input$edgeOI)],
-                                 col.labels = col4ImportantEdg[which(importantEdg == TRUE & net.edge %in% input$edgeOI)],
-                                 text.cex = 2,
-                                 force = 2,
-                                 title = "Contibutions for all subject x edges")
-
-  cjplot_all$zeMap_background + cjplot_show$zeMap_dots + cjplot_show$zeMap_text
-})
-
-renderPlot({
-  Checkplot_ctr()
-})
-
-```
-
-# Factor map -- sessions with partial factor scores
-
-```{r pF, echo=FALSE, fig.height= 10, fig.width = 10}
-
-inputPanel(
-  actionButton("plot_ses", "Plot!"),
-  awesomeCheckboxGroup(inputId = "session2plot",
-                       label = "Sessions to show:", choices = c(1:10),
-                       selected = c(),inline = TRUE, status = "danger"),
-  awesomeCheckboxGroup(inputId = "sub2plot",
-                       label = "Subjects to show:", choices = c(1:10),
-                       selected = c(),inline = TRUE, status = "success")
-
-)
-
-Checkplot_pF <- eventReactive(input$plot_ses,{
-  plot.pf <- createPartialFactorScoresMap(
-    factorScores = svd.res$ExPosition.Data$fi[as.numeric(input$session2plot),],
-    partialFactorScores = pFi[as.numeric(input$session2plot),,as.numeric(input$sub2plot)],
-    axis1 = 1, axis2 = 2,
-    size.points = 3,
-    size.labels = 3,
-    names4Partial = subj.name[as.numeric(input$sub2plot)],
-    font.labels = "bold"
-  )
-
-  plot.f_sess4pF$zeMap + f.labels + plot.pf$mapColByBlocks
-})
-
-renderPlot({
-  Checkplot_pF()
-}, height = 600, width = 600)
-
-```
-
 # Factor map -- edges
 
 These are edges that contribute significantly to both components.
@@ -105,7 +42,7 @@ inputPanel(
   actionButton("plot_edge", "Plot!"),
   awesomeCheckboxGroup(inputId = "f_edgeOI", 
                        label = "Edges to show:", choices = unique(net.edge),
-                       selected = c(),inline = TRUE, status = "warning"),
+                       selected = unique(net.edge),inline = TRUE, status = "warning"),
   sliderInput(inputId = "top.perc",
               label = "What top percentage of the largest factor scores to show:",                            
               min = 0, max = 1, step = 0.01, value = 0.25)
@@ -142,3 +79,65 @@ renderPlot({
 
 ```
 
+# Factor map -- sessions with partial factor scores
+
+```{r pF, echo=FALSE, fig.height= 10, fig.width = 10}
+
+inputPanel(
+  actionButton("plot_ses", "Plot!"),
+  awesomeCheckboxGroup(inputId = "session2plot",
+                       label = "Sessions to show:", choices = c(1:10),
+                       selected = c(1:10),inline = TRUE, status = "danger"),
+  awesomeCheckboxGroup(inputId = "sub2plot",
+                       label = "Subjects to show:", choices = c(1:10),
+                       selected = c(1:10),inline = TRUE, status = "success")
+
+)
+
+Checkplot_pF <- eventReactive(input$plot_ses,{
+  plot.pf <- createPartialFactorScoresMap(
+    factorScores = svd.res$ExPosition.Data$fi[as.numeric(input$session2plot),],
+    partialFactorScores = pFi[as.numeric(input$session2plot),,as.numeric(input$sub2plot)],
+    axis1 = 1, axis2 = 2,
+    size.points = 3,
+    size.labels = 3,
+    names4Partial = subj.name[as.numeric(input$sub2plot)],
+    font.labels = "bold"
+  )
+
+  plot.f_sess4pF$zeMap + f.labels + plot.pf$mapColByBlocks
+})
+
+renderPlot({
+  Checkplot_pF()
+}, height = 600, width = 600)
+
+```
+
+# Contribution plot
+
+```{r contribution, echo=FALSE, fig.height= 10, fig.width = 10}
+inputPanel(
+  actionButton("plot_ctr", "Plot!"),
+  awesomeCheckboxGroup(inputId = "edgeOI",
+                       label = "Edges to show:", choices = unique(net.edge),
+                       selected = unique(net.edge),inline = TRUE, status = "danger")
+)
+
+Checkplot_ctr <- eventReactive(input$plot_ctr,{
+  cjplot_show <- createFactorMap(c_edge[which(importantEdg == TRUE & net.edge %in% input$edgeOI),],
+                                 axis1 = 1, axis2 = 2,
+                                 col.points = col4ImportantEdg[which(importantEdg == TRUE & net.edge %in% input$edgeOI)],
+                                 col.labels = col4ImportantEdg[which(importantEdg == TRUE & net.edge %in% input$edgeOI)],
+                                 text.cex = 2,
+                                 force = 2,
+                                 title = "Contibutions for all subject x edges")
+
+  cjplot_all$zeMap_background + cjplot_show$zeMap_dots + cjplot_show$zeMap_text
+})
+
+renderPlot({
+  Checkplot_ctr()
+})
+
+```
