--- a/res_MuSu/9_DoubCent[NA, NA, NA]/DoubleCent_(NA, NA, MFA_subs).Rmd
+++ b/res_MuSu/9_DoubCent[NA, NA, NA]/DoubleCent_(NA, NA, MFA_subs).Rmd
@@ -355,9 +355,17 @@ ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
 pF.constraints <- minmaxHelper4Partial(
   FactorScores = svd.res$ExPosition.Data$fi,
   partialFactorScores = pFi)
+Fi.constraints <- minmaxHelper(svd.res$ExPosition.Data$fi)
+
+new.constraints <- list(minx = min(pF.constraints$minx,Fi.constraints$minx),
+                        miny = min(pF.constraints$miny,Fi.constraints$miny),
+                        maxx = max(pF.constraints$maxx,Fi.constraints$maxx),
+                        maxy = max(pF.constraints$maxy,Fi.constraints$maxy))
+
+
 # plot again the factor map
 plot.f_sess4pF <- createFactorMap(svd.res$ExPosition.Data$fi,
-                                  constraints = pF.constraints) # with t(gt)
+                                  constraints = new.constraints) # with t(gt)
 
 # select color for subjects (subtables)
 plot.pf_sess <- createPartialFactorScoresMap(
