--- a/res_MuSu/3_[NA, c, MFA_subs]/MSC_allsubs_simattack/MuSu_bignet_simattack_(NA, c, MFA_subs).Rmd
+++ b/res_MuSu/3_[NA, c, MFA_subs]/MSC_allsubs_simattack/MuSu_bignet_simattack_(NA, c, MFA_subs).Rmd
@@ -73,19 +73,13 @@ dim(gt); dim(gtlabel)
 **Attack 1**
 * In Odd-numbered *subjects* and *sessions*, Reduce within connectivity in Default Mode (Syslabel: 1), Default-FP (1_3) and Default_VAN (1_5).
 
-
 ```{r simattack}
-## REDUCE connectivity
 # identify within default connectivity, default-FP and default-VAN
+# Identify edges that are in odd # subs
+# Simulate reduced connectivity by dividing edges that were identified by 2
 i_attack <- which(is.element(gtlabel$edges_label, c("1","1_3","1_5"))) 
 i_sub <- which(is.element(as.character(gtlabel$subjects_label), paste("sub0", seq(1,10,2), sep = "")))
-
-# Identify edges that are in odd # subs
-gt[seq(1,10, 2),i_attack[is.element(i_attack, i_sub)]] <- gt[seq(1,10, 2),i_attack[is.element(i_attack, i_sub)]]/2 # divide edges that were within default by 
-
-## INCREASE Connectivity
-# Identify edges that are in odd # subs
-# gt[seq(1,10, 2),i_attack[is.element(i_attack, i_sub)]] <- gt[seq(1,10, 2),i_attack[is.element(i_attack, i_sub)]]/2 # divide edges that were within default by 2
+gt[seq(1,10, 2),i_attack[is.element(i_attack, i_sub)]] <- gt[seq(1,10, 2),i_attack[is.element(i_attack, i_sub)]]/2 
 ```
 
 > This is an SVD with centered columns and hierarchical (network edges -> subjects) MFA-normalized tables.
@@ -409,7 +403,8 @@ tictoc::tic()
 BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fj,
                            design = gtlabel$subjects_edge_label,
                            niter = 100,
-                           suppressProgressBar = TRUE)
+                           suppressProgressBar = TRUE,
+                           parallelize = TRUE)
 tictoc::toc()
 
 # Compute means of factor scores for different types of edges
@@ -420,7 +415,8 @@ tictoc::tic()
 BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fj,
                               design = gtlabel$subjects_wb,
                               niter = 100,
-                              suppressProgressBar = TRUE)
+                              suppressProgressBar = TRUE,
+                              parallelize = TRUE)
 tictoc::toc()
 ```
 
