--- a/res_MuSu/7_[NA, c, HMFA]/MSC_allsubs_bignetworks/MuSu_bignet_(NA, c, HMFA).Rmd
+++ b/res_MuSu/7_[NA, c, HMFA]/MSC_allsubs_bignetworks/MuSu_bignet_(NA, c, HMFA).Rmd
@@ -184,7 +184,7 @@ for (k in 1:n_lv){
   }
   sv[[k]] <- matrix(NA, 1, n_subtable[[k]])
   colnames(sv[[k]]) <- unique(subtab_i[[k]])
-
+  
   for(i in 1:n_subtable[[k]]){
     sv[[k]][i] <- (svd(cgt[,subtab_i[[k]]==unique(subtab_i[[k]])[i]])$d[1]) # singular value from svd 
     
@@ -285,12 +285,12 @@ Then the contributions are shown in plots
 
 ```{r plot_ci, echo=F, fig.show = 'hide'}
 ciplot <- createFactorMap(cI,
-                              axis1 = 1, axis2 = 2,
-                              col.points = col4ImportantSes,
-                              text.cex = 5,
-                              cex = 3,
-                              force = 0.5,
-                              title = "Contibutions for sessions")
+                          axis1 = 1, axis2 = 2,
+                          col.points = col4ImportantSes,
+                          text.cex = 5,
+                          cex = 3,
+                          force = 0.5,
+                          title = "Contibutions for sessions")
 
 cjplot_all <- createFactorMap(c_edge,
                               axis1 = 1, axis2 = 2,
@@ -363,8 +363,8 @@ ch2 <- cgt %*% (svd.res$ExPosition.Data$pdq$q)
 #  And plot them on the same factor map:
 #find the constraints for the pF map
 pF.constraints <- minmaxHelper4Partial(
-                                    FactorScores = svd.res$ExPosition.Data$fi,
-                                    partialFactorScores = pFi)
+  FactorScores = svd.res$ExPosition.Data$fi,
+  partialFactorScores = pFi)
 # plot again the factor map
 plot.f_sess4pF <- createFactorMap(svd.res$ExPosition.Data$fi,
                                   constraints = pF.constraints) # with t(gt)
@@ -388,13 +388,31 @@ To have a clearer view of the factor scores for the subject x edges, we first co
 # Compute means of factor scores for different edges----
 mean.fj <- getMeans(svd.res$ExPosition.Data$fj, gtlabel$subjects_edge_label) # with t(gt)
 colnames(mean.fj) <- sapply(c(1:ncol(mean.fj)), function(x){sprintf("Factor %s",x)})
- 
+
 tictoc::tic()
 BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fj,
+                           parallelize = T,
                            design = gtlabel$subjects_edge_label,
                            niter = 100,
                            suppressProgressBar = TRUE)
 tictoc::toc()
+
+# compute mean factor scores for each edge and the partial factor scores of each subject for these factor scores
+### use split string to separate the subject and edge labels (this is done at this step because we want to take the average across them after averaging across regions that belong to the same edge and subject)
+mean.fj.label <- strsplit(sub('(^[^_]+)_(.*)$', '\\1 \\2', rownames(mean.fj)), ' ') %>% unlist %>% matrix(ncol = 2, byrow = T, dimnames = list(rownames(mean.fj),c("sub","edge"))) %>% data.frame
+### compute means
+mean.edge.fj <- getMeans(mean.fj, mean.fj.label$edge)
+### create array for partial factor scores
+edge.pF <- array(data = NA, dim = (c(nrow(mean.edge.fj),ncol(mean.fj),length(unique(mean.fj.label$sub)))), dimnames = list(rownames(mean.edge.fj),colnames(mean.fj),unique(mean.fj.label$sub)))
+### fill the array of partial factor scores
+n.edges <- dim(edge.pF)[1]
+for (i in 1:length(subj.name)){
+  for (j in 1:n.edges){
+    tbname <- subj.name[i]
+    rwname <- rownames(edge.pF)[j]
+    edge.pF[rwname,,tbname] <- as.matrix(mean.fj[which(mean.fj.label$sub == tbname & mean.fj.label$edge == rwname),])
+  }
+}
 
 # Compute means of factor scores for different types of edges
 mean.fj.bw <- getMeans(svd.res$ExPosition.Data$fj, gtlabel$subjects_wb) # with t(gt)
@@ -402,9 +420,10 @@ colnames(mean.fj.bw) <- sapply(c(1:ncol(mean.fj.bw)), function(x){sprintf("Facto
 
 tictoc::tic()
 BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fj,
-                           design = gtlabel$subjects_wb,
-                           niter = 100,
-                           suppressProgressBar = TRUE)
+                              parallelize = T,
+                              design = gtlabel$subjects_wb,
+                              niter = 100,
+                              suppressProgressBar = TRUE)
 tictoc::toc()
 ```
 
@@ -428,27 +447,44 @@ f_netedge_plot02 <- plot.f_edge_imp$zeMap_background + plot.f_edge_imp$zeMap_dot
 
 # plot only the significant network edges
 plot.f_impedge <- createFactorMap(mean.fj[importantEdg,], axis1 = 1, axis2 = 2,
-                                   col.points = col4ImportantEdg[importantEdg,],
-                                   col.labels = col4ImportantEdg[importantEdg,],
-                                   constraints = plot.f_edge_imp$constraints,
-                                   text.cex = 2,
-                                   force = 0.5,
-                                   title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
+                                  col.points = col4ImportantEdg[importantEdg,],
+                                  col.labels = col4ImportantEdg[importantEdg,],
+                                  constraints = plot.f_edge_imp$constraints,
+                                  text.cex = 2,
+                                  force = 0.5,
+                                  title = "Significantly contributed factor scores\n(colored by subject_x_edge types)")
 f_netedge_plot03 <- plot.f_impedge$zeMap + f.labels
 
 # plot mean factor scores of subject x edge type
 plot.f_bw_imp <- createFactorMap(mean.fj.bw, axis1 = 1, axis2 = 2,
-                                   col.points = net.edge.col$gc[rownames(mean.fj.bw),],
-                                   col.labels = net.edge.col$gc[rownames(mean.fj.bw),],
-                                   text.cex = 3,
-                                   force = 0.5,
-                                   title = "Mean factor scores for subject_x_edge types")
+                                 col.points = net.edge.col$gc[rownames(mean.fj.bw),],
+                                 col.labels = net.edge.col$gc[rownames(mean.fj.bw),],
+                                 text.cex = 3,
+                                 force = 0.5,
+                                 title = "Mean factor scores for subject_x_edge types")
 f_netedge_plot04 <- plot.f_bw_imp$zeMap_background + plot.f_bw_imp$zeMap_dots + plot.f_bw_imp$zeMap_text + f.labels
+
+# plot mean factor scores of network edges
+### plot the mean factor scores for network edges
+plot.f_edge4pF <- createFactorMap(mean.edge.fj,
+                                  constraints = minmaxHelper4Partial(mean.edge.fj,edge.pF),
+                                  text.cex = 3) # with t(gt)
+
+# partial factor scores for for subjects (subtables)
+plot.pf_edge <- createPartialFactorScoresMap(
+  factorScores = mean.edge.fj,
+  partialFactorScores = edge.pF,
+  axis1 = 1, axis2 = 2,
+  names4Partial = subj.name,
+  font.labels = "bold"
+)
+
+f_netedge_plot05 <- plot.f_edge4pF$zeMap + f.labels + plot.pf_edge$mapColByBlocks
 
 ```
 
 ```{r grid_f_netedge_plot, echo=F, fig.height=12, fig.width=12}
-gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.grob(f_netedge_plot03),as.grob(f_netedge_plot04),nrow=2,
+gridExtra::grid.arrange(as.grob(f_netedge_plot01), as.grob(f_netedge_plot02),as.grob(f_netedge_plot03),as.grob(f_netedge_plot04), as.grob(f_netedge_plot05),nrow=2,
                         top = textGrob("Mean factor scores for edges",gp=gpar(fontsize=18,font=3)))
 ```
 
@@ -461,9 +497,9 @@ We can also add boostrap intervals for the factor scores
 getBoot2plot_edge <- BootCube.Comm$BootCube[importantEdg,c(1,2),]
 # plot the CI ellipses
 f_impedge.CI <- MakeCIEllipses(getBoot2plot_edge,
-                                 names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
-                                 col = col4ImportantEdg[importantEdg,],
-                                 p.level = .95)
+                               names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
+                               col = col4ImportantEdg[importantEdg,],
+                               p.level = .95)
 # create plot
 f_CInetedge_plot01 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f.labels
 f_CInetedge_plot02 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dots + f_impedge.CI + f.labels
@@ -472,9 +508,9 @@ f_CInetedge_plot02 <- plot.f_impedge$zeMap_background + plot.f_impedge$zeMap_dot
 getBoot2plot_edge_bw <- BootCube.Comm.bw$BootCube[,c(1,2),]
 # plot the CI ellipses
 plot.CI.f_bw <- MakeCIEllipses(getBoot2plot_edge_bw,
-                                 names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
-                                 col = net.edge.col$gc[rownames(getBoot2plot_edge_bw),],
-                                 p.level = .95)
+                               names.of.factors = c(sprintf("Factor %s", 1),sprintf("Factor %s", 2)),
+                               col = net.edge.col$gc[rownames(getBoot2plot_edge_bw),],
+                               p.level = .95)
 # create plot
 f_CInetedge_plot03 <- plot.f_bw_imp$zeMap + plot.CI.f_bw + f.labels
 ```
@@ -490,8 +526,8 @@ We can also show the factor scores for network edges as square matrix of each su
 fj1_sqmat <- list()
 fj2_sqmat <- list()
 for(i in 1:length(subj.name)){
-   fj1_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],1]) 
-   fj2_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],2])   
+  fj1_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],1]) 
+  fj2_sqmat[[i]] <- vec2sqmat(svd.res$ExPosition.Data$fj[gtlabel$subjects_label==subj.name[i],2])   
 }
 
 ## Set heat limit
@@ -503,38 +539,38 @@ heat_fj1 <- list()
 heat_fj2 <- list()
 for(i in 1:length(subj.name)){
   heat_fj1[[i]] <- superheat(as.matrix(fj1_sqmat[[i]]), y.axis.reverse = T,
-                    membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
-                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
-                    left.label.col = labelcol[[i]],
-                    bottom.label.col = labelcol[[i]],
-                    left.label.size = 0.08,
-                    bottom.label.size = 0.05,
-                    extreme.values.na = FALSE,
-                    heat.lim = heatlim,
-                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                    heat.pal.values = c(0,0.35,0.5,0.65,1),
-                    left.label.text.size = 3,
-                    bottom.label.text.size = 2,
-                    left.label.text.col = textcol[[i]], 
-                    bottom.label.text.col = textcol[[i]], 
-                    title=sprintf("%s, dim1",subj.name[i]))$plot
+                             membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                             membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                             left.label.col = labelcol[[i]],
+                             bottom.label.col = labelcol[[i]],
+                             left.label.size = 0.08,
+                             bottom.label.size = 0.05,
+                             extreme.values.na = FALSE,
+                             heat.lim = heatlim,
+                             heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                             heat.pal.values = c(0,0.35,0.5,0.65,1),
+                             left.label.text.size = 3,
+                             bottom.label.text.size = 2,
+                             left.label.text.col = textcol[[i]], 
+                             bottom.label.text.col = textcol[[i]], 
+                             title=sprintf("%s, dim1",subj.name[i]))$plot
   
-   heat_fj2[[i]]  <- superheat(fj2_sqmat[[i]], y.axis.reverse = T,
-                    membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
-                    membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,
-                    left.label.col = labelcol[[i]],
-                    bottom.label.col = labelcol[[i]],
-                    left.label.size = 0.08,
-                    bottom.label.size = 0.05,
-                    extreme.values.na = FALSE,
-                    heat.lim = heatlim,
-                    heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                    heat.pal.values = c(0,0.35,0.5,0.65,1),
-                    left.label.text.size = 3,
-                    bottom.label.text.size = 2,
-                    left.label.text.col = textcol[[i]],
-                    bottom.label.text.col = textcol[[i]],
-                    title=sprintf("%s, dim2",subj.name[i]))$plot
+  heat_fj2[[i]]  <- superheat(fj2_sqmat[[i]], y.axis.reverse = T,
+                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,
+                              left.label.col = labelcol[[i]],
+                              bottom.label.col = labelcol[[i]],
+                              left.label.size = 0.08,
+                              bottom.label.size = 0.05,
+                              extreme.values.na = FALSE,
+                              heat.lim = heatlim,
+                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                              heat.pal.values = c(0,0.35,0.5,0.65,1),
+                              left.label.text.size = 3,
+                              bottom.label.text.size = 2,
+                              left.label.text.col = textcol[[i]],
+                              bottom.label.text.col = textcol[[i]],
+                              title=sprintf("%s, dim2",subj.name[i]))$plot
 }
 
 ```
@@ -554,7 +590,7 @@ fj_sig <- svd.res$ExPosition.Data$fj
 fj_sig[!importantEdg1] <- 0
 fj1_sig_sqmat <- list()
 for(i in 1:length(subj.name)){
-   fj1_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],1])
+  fj1_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],1])
 }
 
 heat_sigfj1 <- list()
@@ -588,23 +624,23 @@ Smoothed Sig Factor Score (Dim 1)
 #--- the important variables are the ones that contribute more than or equal to the average
 sm_heat_sigfj1 <- list()
 for(i in 1:length(subj.name)){
-sm_heat_sigfj1[[i]] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
-                              smooth.heat = T, smooth.heat.type = "mean",
-                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
-                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
-                              left.label.col = labelcol[[i]],
-                              bottom.label.col = labelcol[[i]],
-                              left.label.size = 0.08,
-                              bottom.label.size = 0.05,
-                              extreme.values.na = FALSE,
-                              heat.lim = heatlim,
-                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                              heat.pal.values = c(0,0.35,0.5,0.65,1),
-                              left.label.text.size = 3,
-                              bottom.label.text.size = 2,
-                              left.label.text.col = textcol[[i]], 
-                              bottom.label.text.col = textcol[[i]], 
-                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))$plot
+  sm_heat_sigfj1[[i]] <- superheat(fj1_sig_sqmat[[i]], y.axis.reverse = T,
+                                   smooth.heat = T, smooth.heat.type = "mean",
+                                   membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                                   membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                                   left.label.col = labelcol[[i]],
+                                   bottom.label.col = labelcol[[i]],
+                                   left.label.size = 0.08,
+                                   bottom.label.size = 0.05,
+                                   extreme.values.na = FALSE,
+                                   heat.lim = heatlim,
+                                   heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                   heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                   left.label.text.size = 3,
+                                   bottom.label.text.size = 2,
+                                   left.label.text.col = textcol[[i]], 
+                                   bottom.label.text.col = textcol[[i]], 
+                                   title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))$plot
 }
 
 ```
@@ -618,7 +654,7 @@ Factor score (Dim 2) in square matrix that have significant contribution only
 ```{r, squaremat_sigfj2, echo=F, fig.show = 'hide'}
 fj2_sig_sqmat <- list()
 for(i in 1:length(subj.name)){
-   fj2_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],2])
+  fj2_sig_sqmat[[i]] <- vec2sqmat(fj_sig[gtlabel$subjects_label==subj.name[i],2])
 }
 
 heat_sigfj2 <- list()
@@ -653,23 +689,23 @@ Smoothed Sig Factor Score (Dim 2)
 #--- the important variables are the ones that contribute more than or equal to the average
 sm_heat_sigfj2 <- list()
 for(i in 1:length(subj.name)){
-sm_heat_sigfj2[[i]] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
-                              smooth.heat = T, smooth.heat.type = "mean",
-                              membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
-                              membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
-                              left.label.col = labelcol[[i]],
-                              bottom.label.col = labelcol[[i]],
-                              left.label.size = 0.08,
-                              bottom.label.size = 0.05,
-                              extreme.values.na = FALSE,
-                              heat.lim = heatlim,
-                              heat.pal = kovesi.diverging_bwr_40_95_c42(200),
-                              heat.pal.values = c(0,0.35,0.5,0.65,1),
-                              left.label.text.size = 3,
-                              bottom.label.text.size = 2,
-                              left.label.text.col = textcol[[i]], 
-                              bottom.label.text.col = textcol[[i]], 
-                              title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))$plot
+  sm_heat_sigfj2[[i]] <- superheat(fj2_sig_sqmat[[i]], y.axis.reverse = T,
+                                   smooth.heat = T, smooth.heat.type = "mean",
+                                   membership.rows = parcel.list[[i]]$vox.des$Comm.rcd,
+                                   membership.cols = parcel.list[[i]]$vox.des$Comm.rcd,                    
+                                   left.label.col = labelcol[[i]],
+                                   bottom.label.col = labelcol[[i]],
+                                   left.label.size = 0.08,
+                                   bottom.label.size = 0.05,
+                                   extreme.values.na = FALSE,
+                                   heat.lim = heatlim,
+                                   heat.pal = kovesi.diverging_bwr_40_95_c42(200),
+                                   heat.pal.values = c(0,0.35,0.5,0.65,1),
+                                   left.label.text.size = 3,
+                                   bottom.label.text.size = 2,
+                                   left.label.text.col = textcol[[i]], 
+                                   bottom.label.text.col = textcol[[i]], 
+                                   title=sprintf("%s: significant contribution (mean-smooth)",subj.name[i]))$plot
 }
 ```
 
