Update Rmarkdown with correct data and add bootstrap for the mean factor scores of the common edges (*The bootstrap codes were added to .rmd but was not knitted to the .md yet. This should be next.)

--- a/res_MuSu/11_DoubCent[NC, c, HMFA]/DoubleCent_(NA, c, HMFA).Rmd
+++ b/res_MuSu/11_DoubCent[NC, c, HMFA]/DoubleCent_(NA, c, HMFA).Rmd
@@ -387,6 +387,7 @@ colnames(mean.fj) <- sapply(c(1:ncol(mean.fj)), function(x){sprintf("Factor %s",
  
 tictoc::tic()
 BootCube.Comm <- Boot4Mean(svd.res$ExPosition.Data$fj,
+                           parallelize = T,
                            design = gtlabel$subjects_edge_label,
                            niter = 100,
                            suppressProgressBar = TRUE)
@@ -398,9 +399,10 @@ colnames(mean.fj.bw) <- sapply(c(1:ncol(mean.fj.bw)), function(x){sprintf("Facto
 
 tictoc::tic()
 BootCube.Comm.bw <- Boot4Mean(svd.res$ExPosition.Data$fj,
-                           design = gtlabel$subjects_wb,
-                           niter = 100,
-                           suppressProgressBar = TRUE)
+                              parallelize = T,
+                              design = gtlabel$subjects_wb,
+                              niter = 100,
+                              suppressProgressBar = TRUE)
 tictoc::toc()
 ```
 
