--- a/res_MuSu_4rows/7_[NA, c, HMFA]/MSC_allsubs/MuSu_bignet_4rows_(NA, c, HMFA).Rmd
+++ b/res_MuSu_4rows/7_[NA, c, HMFA]/MSC_allsubs/MuSu_bignet_4rows_(NA, c, HMFA).Rmd
@@ -124,6 +124,7 @@ subtab_i <-  list(gtlabel$subjects_edge_label, gtlabel$subjects_label)  # Use su
 n_subtable <- list(length(unique(subtab_i[[1]])), length(unique(subtab_i[[2]])))  # Number of mini tables
 n_lv <- length(subtab_i)
 sv <- list()
+data2check <- list()
 
 for (k in 1:n_lv){
   if (k == 1){
@@ -133,10 +134,12 @@ for (k in 1:n_lv){
   colnames(sv[[k]]) <- unique(subtab_i[[k]])
   
   for(i in 1:n_subtable[[k]]){
-    sv[[k]][i] <- (svd(cgt[,subtab_i[[k]]==unique(subtab_i[[k]])[i]])$d[1]) # singular value from svd 
+    sv[[k]][i] <- (svd(mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]])$d[1]) # singular value from svd 
     
     # mfa-normalization
-    mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]] <- mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]]/sv[[k]][i]
+    mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]] <- mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]]/sv[[k]]
+    
+    data2check[[k]] <- mfa_preproc
   }
 }
 
