Fixed Line 140 (dividing the correct delta)

--- a/res_MuSu_4rows/7_[NA, c, HMFA]/MSC_allsubs/MuSu_bignet_4rows_(NA, c, HMFA).Rmd
+++ b/res_MuSu_4rows/7_[NA, c, HMFA]/MSC_allsubs/MuSu_bignet_4rows_(NA, c, HMFA).Rmd
@@ -137,10 +137,10 @@ for (k in 1:n_lv){
     sv[[k]][i] <- (svd(mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]])$d[1]) # singular value from svd 
     
     # mfa-normalization
-    mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]] <- mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]]/sv[[k]]
+    mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]] <- mfa_preproc[,subtab_i[[k]]==unique(subtab_i[[k]])[i]]/sv[[k]][i]
     
-    data2check[[k]] <- mfa_preproc
   }
+  data2check[[k]] <- mfa_preproc
 }
 
 # set the column names
